# nonlinear

./: README.md  pyproject.toml
nonlinear/: ActivationFunction.py  ChannelBasedActivationFunction.py  LearnableActivationFunction.py  __init__.py
nonlinear/channel_based/: BLU.py  CELU.py  DPReLU.py  DualLine.py  EPReLU.py  FELU.py  FPAF.py  FReLU.py  LPSELU.py  LeLeLU.py  LearnableTeLU.py  PEReLU.py  PSELU.py  PTELU.py  PairedReLU.py  PiLU.py  RMAF.py  RTPReLU.py  ReBLU.py  ReLTanh.py  ShiLU.py  SoftClippingMish.py  SoftExponential.py  TaLU.py  TanhLU.py  TunableSwish.py  __init__.py
nonlinear/functional/: __init__.py  abslu.py  ada.py  aoaf.py  asilu.py  calu.py  crelu.py  derivative_silu.py
nonlinear/jax/: ActivationFunction.py
nonlinear/learnable/: AOAF.py  AReLU.py  DPReLU.py  DualLine.py  ERFReLU.py  FELU.py  FPAF.py  FReLU.py  LeLeLU.py  LearnableActivationFunction.py  LearnableLiReLU.py  MPELU.py  PELU.py  PERU.py  PREU.py  ParametricSwish.py  PiLU.py  RMAF.py  ShiLU.py  StarReLU.py  TReLU.py  TaLU.py  __init__.py
nonlinear/static/: ADA.py  AOAF.py  ASiLU.py  AbsLU.py  AdaptiveActivationFunction.py  BaseDLReLU.py  CReLU.py  CaLU.py  DLU.py  DRLU.py  DerivativeSiLU.py  DiffELU.py  DoubleSiLU.py  EANAF.py  ERF.py  Elliot.py  ExpExpish.py  ExponentialSwish.py  FlattedTSwish.py  GCU.py  GeneralizedSwish.py  Gish.py  IpLU.py  LaLU.py  LogLogish.py  LogSigmoid.py  Logish.py  MaxSig.py  NLReLU.py  NReLU.py  PFLU.py  PLAF.py  ParametricLogish.py  Phish.py  PoLU.py  PolyLU.py  RReLU.py  RePU.py  ReSech.py  SGELU.py  (+17 more)
nonlinear/torch/: ActivationFunction.py  (+2 more)
(+40 files in other folders)
